--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flip Clock | @caltikoc</title>
   <link rel="stylesheet" href="app.css">
 </head>
@@ -11,16 +11,20 @@
     <div class="flip-clock-container">
       <div class="flip-clock flip-clock-h">
         <div class="digit digit-left">
+          <!-- ::before -->
           <div class="card">
             <div class="card-face card-face-front"></div>
             <div class="card-face card-face-back"></div>
           </div>
+          <!-- ::after -->
         </div>
         <div class="digit digit-right">
+          <!-- ::before -->
           <div class="card">
             <div class="card-face card-face-front"></div>
             <div class="card-face card-face-back"></div>
           </div>
+          <!-- ::after -->
         </div>
       </div>
 
@@ -28,16 +32,20 @@
 
       <div class="flip-clock flip-clock-m">
         <div class="digit digit-left">
+          <!-- ::before -->
           <div class="card">
             <div class="card-face card-face-front"></div>
             <div class="card-face card-face-back"></div>
           </div>
+          <!-- ::after -->
         </div>
         <div class="digit digit-right">
+          <!-- ::before -->
           <div class="card">
             <div class="card-face card-face-front"></div>
             <div class="card-face card-face-back"></div>
           </div>
+          <!-- ::after -->
         </div>
       </div>
 
@@ -45,16 +53,20 @@
 
       <div class="flip-clock flip-clock-s">
         <div class="digit digit-left">
+          <!-- ::before -->
           <div class="card">
             <div class="card-face card-face-front"></div>
             <div class="card-face card-face-back"></div>
           </div>
+          <!-- ::after -->
         </div>
         <div class="digit digit-right">
+          <!-- ::before -->
           <div class="card">
             <div class="card-face card-face-front"></div>
             <div class="card-face card-face-back"></div>
           </div>
+          <!-- ::after -->
         </div>
       </div>
     </div>
